--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                  <li> <a href="https://privateeye421.github.io/csci340blog/">Home</a></li>
                  <li><a href="https://privateeye421.github.io/csci340blog/about/">About</a></li>
                  <li><a href="http://mark.goadrich.com/courses/csci340f19/labs/lab4.html">Class Page</a></li>
-                 <li><a href="/pleasegod/">Don't Click This</a></li>
+                 <li><a href="/:pleasegod/">Don't Click This</a></li>
              </ul>
          </nav>
      </div>
